# serializer version: 1
# name: TestCategoryServiceSnapshot.test_delete_and_batch_delete_category_map_cache_snapshot
  dict({
    'batch_delete_result': 0,
    'single_delete_result': False,
  })
# ---
# name: TestCategoryServiceSnapshot.test_get_category_map_cache_list_snapshot
  dict({
    'items': list([
      dict({
        'app': 'code.exe',
        'app_description': 'VSCode编辑器',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 'm-2b110b6e',
        'is_multipurpose_app': True,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': '测试编码',
        'sub_category_id': 'test_coding',
        'title': 'main.py - VSCode',
        'title_analysis': '编辑Python文件',
      }),
      dict({
        'app': 'chrome.exe',
        'app_description': 'Chrome浏览器',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 'm-432c12c3',
        'is_multipurpose_app': True,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': '测试编码',
        'sub_category_id': 'test_coding',
        'title': 'YouTube - Video',
        'title_analysis': 'YouTube视频',
      }),
      dict({
        'app': 'chrome.exe',
        'app_description': 'Chrome浏览器',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 'm-5a8d7422',
        'is_multipurpose_app': True,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': None,
        'sub_category_id': '1-1',
        'title': 'GitHub - Pull Request',
        'title_analysis': 'GitHub代码审查',
      }),
      dict({
        'app': 'code.exe',
        'app_description': 'VSCode编辑器',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 'm-f208ea44',
        'is_multipurpose_app': True,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': '测试编码',
        'sub_category_id': 'test_coding',
        'title': 'test.js - VSCode',
        'title_analysis': '编辑JavaScript文件',
      }),
      dict({
        'app': 'pycharm.exe',
        'app_description': 'PyCharm集成开发环境',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 's-1ba7cb5d',
        'is_multipurpose_app': False,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': '测试编码',
        'sub_category_id': 'test_coding',
        'title': 'PyCharm IDE',
        'title_analysis': None,
      }),
      dict({
        'app': 'notepad++.exe',
        'app_description': 'Notepad++文本编辑器',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 's-239debb6',
        'is_multipurpose_app': False,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': '测试编码',
        'sub_category_id': 'test_coding',
        'title': 'Notepad++',
        'title_analysis': None,
      }),
      dict({
        'app': 'git.exe',
        'app_description': 'Git版本控制工具',
        'category': '测试工作',
        'category_id': 'test_work',
        'id': 's-c57e879d',
        'is_multipurpose_app': False,
        'link_to_goal': None,
        'link_to_goal_id': None,
        'state': 1,
        'sub_category': '测试编码',
        'sub_category_id': 'test_coding',
        'title': 'Git',
        'title_analysis': None,
      }),
    ]),
    'page': 1,
    'page_size': 10,
    'total': 7,
    'total_pages': 1,
  })
# ---
# name: TestCategoryServiceSnapshot.test_get_category_tree_depth_1_snapshot
  list([
    dict({
      'color': '#FF5733',
      'id': 'cat-0a194756',
      'name': '测试分类',
      'state': 1,
      'subcategories': None,
    }),
    dict({
      'color': '#F6BD16',
      'id': 'cat-entertainment',
      'name': '娱乐',
      'state': 1,
      'subcategories': None,
    }),
    dict({
      'color': '#E8684A',
      'id': 'cat-other',
      'name': '其他',
      'state': 1,
      'subcategories': None,
    }),
    dict({
      'color': '#5AD8A6',
      'id': 'cat-study',
      'name': '学习',
      'state': 1,
      'subcategories': None,
    }),
    dict({
      'color': '#5B8FF9',
      'id': 'cat-work',
      'name': '工作',
      'state': 1,
      'subcategories': None,
    }),
    dict({
      'color': '#5B8FF9',
      'id': 'test_work',
      'name': '测试工作',
      'state': 1,
      'subcategories': None,
    }),
  ])
# ---
# name: TestCategoryServiceSnapshot.test_get_category_tree_depth_2_snapshot
  list([
    dict({
      'color': '#FF5733',
      'id': 'cat-0a194756',
      'name': '测试分类',
      'state': 1,
      'subcategories': list([
        dict({
          'color': '#f87053',
          'id': 'sub-346a612c',
          'name': '测试',
          'state': 1,
        }),
        dict({
          'color': '#cc2400',
          'id': 'sub-4dff14d2',
          'name': '测试',
          'state': 1,
        }),
      ]),
    }),
    dict({
      'color': '#F6BD16',
      'id': 'cat-entertainment',
      'name': '娱乐',
      'state': 1,
      'subcategories': list([
        dict({
          'color': '#f6c022',
          'id': 'subcat-entertainment-other',
          'name': '其他',
          'state': 1,
        }),
      ]),
    }),
    dict({
      'color': '#E8684A',
      'id': 'cat-other',
      'name': '其他',
      'state': 1,
      'subcategories': list([
        dict({
          'color': '#e55533',
          'id': 'subcat-other-other',
          'name': '其他',
          'state': 1,
        }),
      ]),
    }),
    dict({
      'color': '#5AD8A6',
      'id': 'cat-study',
      'name': '学习',
      'state': 1,
      'subcategories': list([
        dict({
          'color': '#45d39a',
          'id': 'subcat-study-other',
          'name': '其他',
          'state': 1,
        }),
      ]),
    }),
    dict({
      'color': '#5B8FF9',
      'id': 'cat-work',
      'name': '工作',
      'state': 1,
      'subcategories': list([
        dict({
          'color': '#2167f6',
          'id': 'subcat-work-other',
          'name': '其他',
          'state': 1,
        }),
      ]),
    }),
    dict({
      'color': '#5B8FF9',
      'id': 'test_work',
      'name': '测试工作',
      'state': 1,
      'subcategories': list([
        dict({
          'color': '#2167f6',
          'id': 'test_coding',
          'name': '测试编码',
          'state': 1,
        }),
      ]),
    }),
  ])
# ---
# name: TestCategoryServiceSnapshot.test_update_category_map_cache_snapshot
  dict({
    'update_success': True,
    'updated_record': dict({
      'app': 'chrome.exe',
      'app_description': 'Chrome浏览器',
      'category': '测试工作',
      'category_id': 'test_work',
      'id': 'm-5a8d7422',
      'is_multipurpose_app': True,
      'link_to_goal': None,
      'link_to_goal_id': None,
      'state': 1,
      'sub_category': None,
      'sub_category_id': '1-1',
      'title': 'GitHub - Pull Request',
      'title_analysis': 'GitHub代码审查',
    }),
  })
# ---
